about.md: generate an RDF file from the FOAF metadata.

--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,4 @@ namespaces: {
   xsd:  'http://www.w3.org/2001/XMLSchema#' }
 stylesheet: /css/main.css
 title: Dive Into Programming
+url: http://www.reecedunn.co.uk
