Standardise on a simpler post permalink to avoid spamming directories.

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ namespaces: {
   s:    'http://schema.org/',
   v:    'http://rdf.data-vocabulary.org/#',
   xsd:  'http://www.w3.org/2001/XMLSchema#' }
+permalink: /posts/:year-:month-:day/:title.html
 stylesheet: /css/main.css
 title: Dive Into Programming
 url: http://www.reecedunn.co.uk
