--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 author: {'name': 'Reece H. Dunn', 'foaf': '/about#me'}
+error_pages: {
+  '404': '/error/404.html'}
 exclude: ['COPYING.CC_BY_30','Makefile','README.md']
 start_year: 2010
 language: en
