Rebrand the site as 'Cainteoir Technologies'.

--- a/_config.yml
+++ b/_config.yml
@@ -17,5 +17,5 @@ namespaces: {
   xsd:  'http://www.w3.org/2001/XMLSchema#' }
 permalink: /posts/:year-:month-:day/:title.html
 stylesheet: /css/main.css
-title: Dive Into Programming
+title: Cainteoir Technologies
 url: http://www.reecedunn.co.uk
